tests/ui/wrong_validator_type.stderr
error[E0308]: mismatched types
  --> tests/ui/wrong_validator_type.rs:19:17
   |
16 | #[derive(Validated)]
   |          --------- expected due to this
...
19 |     #[validator(is_positive)] // Use the String validator
   |                 ^^^^^^^^^^^ expected fn pointer, found fn item
   |
   = note: expected fn pointer `fn(_) -> Result<_, E>`
                 found fn item `fn(_) -> Result<_, String> {is_positive}`
   = note: when the arguments and return types match, functions can be coerced to function pointers

error[E0308]: mismatched types
  --> tests/ui/wrong_validator_type.rs:16:10
   |
16 | #[derive(Validated)]
   |          ^^^^^^^^^
   |          |
   |          expected `E`, found `String`
   |          arguments to this method are incorrect
   |
note: method defined here
  --> $RUST/alloc/src/vec/mod.rs
   |
   |     pub fn push(&mut self, value: T) {
   |            ^^^^
   = note: this error originates in the derive macro `Validated` (in Nightly builds, run with -Z macro-backtrace for more info)
